--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
                     </div>
                     
                     <div class="social-links">
-                        <a href="#" class="social-link">LinkedIn</a>
-                        <a href="#" class="social-link">GitHub</a>
+                        <a href="https://www.linkedin.com/in/hans-jaque-poblete-159b7b1b1/" class="social-link">LinkedIn</a>
+                        <a href="https://github.com/hansJaque" class="social-link">GitHub</a>
                     </div>
                 </div>
                 
